--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "weagainstvirus",
+  "name": "wosgeat.online",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,6 +10,10 @@
   "dependencies": {
     "@tailwindcss/ui": "^0.1.3",
     "core-js": "^3.6.4",
+    "npm": "^6.14.4",
+    "run": "^1.4.0",
+    "sere": "0.0.1",
+    "und": "^2.7.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5"
   },
@@ -18,9 +22,11 @@
     "@vue/cli-plugin-eslint": "~4.2.0",
     "@vue/cli-plugin-router": "^4.2.3",
     "@vue/cli-service": "~4.2.0",
+    "axios": "^0.18.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.1.2",
+    "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-tailwind": "~1.2.0",
     "vue-template-compiler": "^2.6.11"
   },
